# ChessEngine

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp  todo.md
.github/: pull_request_template.md
.github/runner/: ubuntu_image.dockerfile
cmake/: ChessEngine.h.in  ChessEngineConfig.cmake.in  clang_format.cmake  clang_tidy.cmake  compile_options.cmake  coverage.cmake  setup_pthread.cmake
docs/: cmake.md  fen_notation.md  uci_protocol.md
include/chess_engine/: attacks.hpp  bitboard.hpp  bitmasks.hpp  board.hpp  color.hpp  exceptions.hpp  game.hpp  knight.hpp  move.hpp  piece.hpp  square.hpp  state.hpp
include/chess_engine/attacks/: bishop.hpp  king.hpp  knight.hpp  pawn.hpp  queen.hpp  rook.hpp
main/: CMakeLists.txt  sandbox.cpp  uci_loop.cpp
src/: CMakeLists.txt
src/chess_engine/: CMakeLists.txt  bitboard.cpp  board.cpp  fen.cpp  game.cpp  move.cpp  move_bishop.cpp  move_king.cpp  move_knight.cpp  move_pawn.cpp  move_queen.cpp  move_rook.cpp  moves_pawn.cpp  piece.cpp  square.cpp
tests/: CMakeLists.txt  fixture_move_test.cpp  setup_test.cpp  test_attacks_king.cpp  test_attacks_pawns.cpp  test_bitboard.cpp  test_board.cpp  test_game.cpp  test_knight.cpp  test_move.cpp  test_move_bishop.cpp  test_move_king.cpp  test_move_knight.cpp  test_move_pawn.cpp  test_move_queen.cpp  test_move_rook.cpp  test_piece.cpp  test_square.cpp
tests/chess_engine/: test_board.cpp  test_uci_loop.cpp
tests/chess_engine/attacks/: test_attacks_bishop.cpp  test_attacks_king.cpp  test_attacks_knight.cpp  test_attacks_pawns.cpp  test_attacks_queen.cpp  test_attacks_rook.cpp
